--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
+    <header class="l-header" id="header">
+        <nav class="nav bd-grid">
+            <div class="nav__toggle" id="nav-toggle">
+                <i class='bx bxs-grid'></i>
+            </div>
+            <a href="#" class="nav__logo">SOHNE</a>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#feature" class="nav__link">Feature</a></li>
+                    <li class="nav__item"><a href="#men" class="nav__link">Mens</a></li>
+                    <li class="nav__item"><a href="#women" class="nav__link">Women</a></li>
+                    <li class="nav__item"><a href="#new" class="nav__link">New</a></li>
+                    <li class="nav__item"><a href="#shop" class="nav__link">Shop</a></li>
+                </ul>
+            </div>
+            <div class="nav__shop">
+                <i class='bx bx-shopping-bag' ></i>
+            </div>
+        </nav>
+    </header>
+
+
+
+
+
     <main class="l-main">
 
     </main>
