--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
         </nav>
     </header>
 
-
-
-
-
     <main class="l-main">
-
+        <section class="home" id="home">
+            <div class="home__container bd-grid">
+                <div class="home_snealer">
+                    <div class="home__shape">
+                        <img src="" alt="" class="home__img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Main JS -->
     <script type="module" src="assets/js/main.js"></script>
