--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
 
     <main class="l-main">
         <section class="home" id="home">
-            <div class="home__container bd-grid">
-                <div class="home_snealer">
+            <div class="home__container  bd-grid">
+                <div class="home__sneaker">
                     <div class="home__shape">
-                        <img src="" alt="" class="home__img">
+                        <img src="assets/img/imghome.png" alt="" class="home__img">
                     </div>
+                    <div class="home__data">
+                        <span class="home__new">New in</span>
+                        <hi class="home__title">YEEZY BOOST <br> SPLY - 350</hi>
+                        <p class="home__description">Explore the new collections of sneakers</p>
+                        <a href="#" class="button">Explore Now</a>
+                    </div>
+
                 </div>
             </div>
         </section>
