Implemented Advance JS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="l-header" id="header">
         <nav class="nav bd-grid">
             <div class="nav__toggle" id="nav-toggle">
-                <i class='bx bxs-grid'></i>
+                <i class="bx bxs-grid"></i>
             </div>
             <a href="#" class="nav__logo">SOHNE</a>
 
