--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link data-trunk rel="copy-dir" href="assets/">
     <!-- Box Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
+    <script crossorigin="true" src="assets/js/main.js"></script>
+    <!-- <link data trunk rel="trunk-dist" href="assets/js/main.js"></script> -->
+
 </head>
 <body>
     <header class="l-header" id="header">
