--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Box Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <script crossorigin="true" src="assets/js/main.js"></script>
-    <!-- <link data trunk rel="trunk-dist" href="assets/js/main.js"></script> -->
+    <!-- <script crossorigin="false" src="assets/js/main.js"></script> -->
+    <!-- <link data trunk rel="trunk-dist" href="assets/js/main.js"></script> --> -->
 
 </head>
 <body>
