--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!-- <script crossorigin="false" src="assets/js/main.js"></script> -->
-    <!-- <link data trunk rel="trunk-dist" href="assets/js/main.js"></script> --> -->
+    <!-- <link data trunk rel="trunk-dist" href="assets/js/main.js"></script> --> 
 
 </head>
 <body>
@@ -55,8 +55,36 @@
                         <p class="home__description">Explore the new collections of sneakers</p>
                         <a href="#" class="button">Explore Now</a>
                     </div>
-
                 </div>
+            </div>
+        </section>
+        <!-- Featured -->
+        <section class="featured section" id="featured">
+            <h2 class="section-title">FEATURED</h2>
+            <div class="featured__container bd-grid">
+                <article class="sneaker">
+                    <div class="sneaker__sale">Sale</div>
+                    <img src="assets/img/featured1.png" alt="" class="sneaker__img">
+                    <span class="sneaker__name">Nike Jordan</span>
+                    <span class="sneaker__preci">$149.99</span>
+                    <a href="" class="button-light">Add to Cart <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                </article>
+
+                <article class="sneaker">
+                    <div class="sneaker__sale">Sale</div>
+                    <img src="assets/img/featured2.png" alt="" class="sneaker_img">
+                    <span class="sneaker__namer">Nike Free RN</span>
+                    <span class="sneaker__preci">$149.99</span>
+                    <a href="" class="button-light">Add to Cart <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                </article>
+
+                <article class="sneaker">
+                    <div class="sneaker__sale">Sale</div>
+                    <img src="assets/img/featured3.png" alt="" class="sneaker_img">
+                    <span class="sneaker__namer">Nike Free RN</span>
+                    <span class="sneaker__preci">$149.99</span>
+                    <a href="" class="button-light">Add to Cart <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                </article>
             </div>
         </section>
     </main>
