--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
 
         <!-- Women Sneakers -->
         <section class="women section" id="women">
-            <h2 class="section-title">
-                WOMEN SNEAKERS
-            </h2>
+            <h2 class="section-title"> WOMEN SNEAKERS</h2>
             <div class="women__container bd-grid">
                 <article class="sneaker">
                     <img src="assets/img/women1.png" alt="" class="sneaker__img">
@@ -152,6 +150,16 @@
                     <span class="sneaker__preci">$129.99</span>
                     <a href="" class="button-light">Add to Cart <i class="bx bx-right-arrow-alt button-icon"></i></a>
                 </article>
+            </div>
+        </section>
+        <section class="offer section">
+            <div class="offer__container bd-grid">
+                <div class="offer__data">
+                    <h3 class="offer__title">50%</h3>
+                    <p class="offer__description">in Adidas Superstar sneakers</p>
+                    <a href="#" class="button">Shop Now</a>
+                </div>
+                <img src="assets/img/offert.png" alt="" class="offer__img">            
             </div>
         </section>
     </main>
