--- a/index.html
+++ b/index.html
@@ -162,6 +162,46 @@
                 <img src="assets/img/offert.png" alt="" class="offer__img">            
             </div>
         </section>
+        <section class="new section" id="new">
+            <h2 class="section-title">NEW COLLECTION</h2>
+            <div class="new__container bd-grid">
+                <div class="new__mens">
+                    <img src="assets/img/new1.png" alt="" class="new__mens-img">
+                    <h3 class="new__title">Mens Shoes</h3>
+                    <span class="new__preci">From 179.99</span>
+                    <a href="#" class="button-light">View Collection <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                </div>
+                <div class="new__sneaker">
+                    <div class="new__sneaker-card">
+                        <img src="assets/img/new2.png" alt="" class="new__sneaker-img">
+                        <div class="new__sneaker-overlay">
+                            <a href="#" class="button">Add to Cart</a>
+                        </div>
+                    </div>
+
+                    <div class="new__sneaker-card">
+                        <img src="assets/img/new3.png" alt="" class="new__sneaker-img">
+                        <div class="new__sneaker-overlay">
+                            <a href="#" class="button">Add to Cart</a>
+                        </div>
+                    </div>
+                    <div class="new__sneaker-card">
+                        <img src="assets/img/new4.png" alt="" class="new__sneaker-img">
+                        <div class="new__sneaker-overlay">
+                            <a href="#" class="button">Add to Cart</a>
+                        </div>
+                    </div>
+                    
+                    <div class="new__sneaker-card">
+                        <img src="assets/img/new5.png" alt="" class="new__sneaker-img">
+                        <div class="new__sneaker-overlay">
+                            <a href="#" class="button">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
     <!-- Main JS -->
     <script type="module" src="assets/js/main.js"></script>
