--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sohne - Footware for Everyone</title>
     
-    <!-- Css -->
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link data-trunk rel="css" href="assets/css/styles.css">
-
     <!-- Assets -->
     <link data-trunk rel="copy-dir" href="assets/">
     <!-- Box Icons -->
@@ -33,7 +32,7 @@
                     <li class="nav__item"><a href="#men" class="nav__link">Mens</a></li>
                     <li class="nav__item"><a href="#women" class="nav__link">Women</a></li>
                     <li class="nav__item"><a href="#new" class="nav__link">New</a></li>
-                    <li class="nav__item"><a href="#shop" class="nav__link">Shop</a></li>
+                    <li class="nav__item"><a href="./shop.html" class="nav__link">Shop</a></li>
                 </ul>
             </div>
             <div class="nav__shop">
