--- a/index.html
+++ b/index.html
@@ -36,26 +36,26 @@
                 </ul>
             </div>
             <div class="nav__shop">
-                <i class='bx bx-shopping-bag' ></i>
+                <i class='bx bx-shopping-bag'></i>
             </div>
         </nav>
     </header>
 
     <main class="l-main">
         <section class="home" id="home">
-            <div class="home__container  bd-grid">
+            <div class="home__container bd-grid">
                 <div class="home__sneaker">
-                    <div class="home__shape">
-                        <img src="assets/img/imghome.png" alt="" class="home__img">
-                    </div>
-                    <div class="home__data">
-                        <span class="home__new">New in</span>
-                        <hi class="home__title">YEEZY BOOST <br> SPLY - 350</hi>
-                        <p class="home__description">Explore the new collections of sneakers</p>
-                        <a href="#" class="button">Explore Now</a>
-                    </div>
+                    <div class="home__shape"></div>
+                    <img src="assets/img/imghome.png" alt="" class="home__img">
+                </div>
+                <div class="home__data">
+                    <span class="home__new">New in</span>
+                    <h1 class="home__title">YEEZY BOOST <br> SPLY - 350</h1>
+                    <p class="home__description">Explore the new collections of sneakers</p>
+                    <a href="#" class="button">Explore Now</a>
                 </div>
             </div>
+            
         </section>
         <!-- Featured -->
         <section class="featured section" id="featured">
