Finished Home Page

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p class="collection__description">New Collection 2020</p>
                         <a href="#" class="button-light">Buy Now<i class="bx bx-right-arrow-alt button-icon"></i></a>
                     </div>
-                    <img src="assets/img/collection1.png" alt="" class="collection__img">
+                    <img src="assets/img/collection4.png" alt="" class="collection__img">
                 </div>
             </div>
         </section>
@@ -200,7 +200,7 @@
                 </div>
             </div>
         </section>
-        <section class="newsletter sectiojn">
+        <section class="newsletter section">
             <div class="newsletter__container bd-grid">
                 <div>
                     <h3 class="newletter__title">Subscriber And Get <br> 10% OFF</h3>
